--- a/package.json
+++ b/package.json
@@ -2,10 +2,21 @@
   "name": "some-proto",
   "version": "0.0.1",
   "private": true,
+  "scripts": {
+    "postcss:build": "cross-env postcss src/some_proto/frontend/app.css -o ./resources/public/out/compiled.css --verbose",
+    "postcss:watch": "cross-env postcss src/some_proto/frontend/app.css -o ./resources/public/out/compiled.css --verbose -w"
+  },
   "devDependencies": {
+    "autoprefixer": "^10.4.12",
+    "cssnano": "^6.0.0",
+    "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.23",
+    "postcss-cli": "^10.1.0",
+    "tailwindcss": "^3.3.2",
     "shadow-cljs": "2.25.3"
   },
   "dependencies": {
+    "cross-env": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
