--- a/package.json
+++ b/package.json
@@ -4,16 +4,21 @@
   "private": true,
   "scripts": {
     "postcss:build": "cross-env postcss src/some_proto/frontend/app.css -o ./resources/public/out/compiled.css --verbose",
-    "postcss:watch": "cross-env postcss src/some_proto/frontend/app.css -o ./resources/public/out/compiled.css --verbose -w"
+    "postcss:watch": "cross-env postcss src/some_proto/frontend/app.css -o ./resources/public/out/compiled.css --verbose -w",
+    "test:run": "shadow-cljs compile :test -v && karma start --single-run",
+    "test:watch": "shadow-cljs watch :test -v & karma start --browsers Chrome --auto-watch"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.12",
     "cssnano": "^6.0.0",
+    "karma": "^6.4.2",
+    "karma-chrome-launcher": "^3.2.0",
+    "karma-cljs-test": "^0.1.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.23",
     "postcss-cli": "^10.1.0",
-    "tailwindcss": "^3.3.2",
-    "shadow-cljs": "2.25.3"
+    "shadow-cljs": "2.25.3",
+    "tailwindcss": "^3.3.2"
   },
   "dependencies": {
     "cross-env": "^7.0.3",
